[tool.poetry]
name = "safe-autonomy-simulation"
version = "2.0.5"
description = "Standalone context-aware simulation environments for Safe Autonomy research."
authors = [
    "james.cunningham <james.cunningham@jacobs.com>",
]
license = "Distribution C"
readme = "README.md"
homepage = "https://git.act3-ace.com/rta/safe-autonomy-stack/safe-autonomy-simulation.git"
repository = "https://git.act3-ace.com/rta/safe-autonomy-stack/safe-autonomy-simulation.git"
documentation = 'https://git.act3-ace.com/rta/safe-autonomy-stack/safe-autonomy-simulation'
keywords = []
include = ["docs/*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{ include = "safe_autonomy_simulation" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pint = "^0.23"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
typing-extensions = "^4.12.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "4.1.0"
pyinstrument = "^4.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.27"
mkdocs-gen-files = "^0.5.0"
mkdocs-autorefs = "^1.0.1"
mkdocs-section-index = "^0.3.9"


[tool.poetry.group.pipeline]
optional = true

[tool.poetry.group.pipeline.dependencies]
twine = "^5.0.0"
coverage-badge = "^1.1.0"


[tool.poetry.group.extras.dependencies]
jax = {extras = ["cpu"], version = "^0.4.26"}


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
ruff = "^0.4.10"

[[tool.poetry.source]]
name = "act3-rl"
url = "https://git.act3-ace.com/api/v4/groups/478/-/packages/pypi/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true
