[tool.poetry]
name = "safe-autonomy-simulation"
version = "2.1.1"
description = "A library for building continuous simulation environments, designed to support safe autonomy research."
authors = [
    "james.cunningham <james.cunningham@parallaxresearch.org>",
]
license = "Distribution C"
readme = "README.md"
homepage = "https://github.com/act3-ace/safe-autonomy-simulation.git"
repository = "https://github.com/act3-ace/safe-autonomy-simulation.git"
documentation = 'https://github.com/act3-ace/safe-autonomy-simulation'
keywords = []
include = ["docs/*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
packages = [{ include = "safe_autonomy_simulation" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
pint = "^0.23"
scipy = "^1.13.0"
scikit-learn = "^1.5.0"
typing-extensions = "^4.12.2"
jax = {extras = ["cpu"], version = "^0.4.30"}
diffrax = {version = "^0.6.0"}

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "4.1.0"
pyinstrument = "^4.3.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.27"
mkdocs-gen-files = "^0.5.0"
mkdocs-autorefs = "^1.0.1"
mkdocs-section-index = "^0.3.9"


[tool.poetry.group.pipeline]
optional = true

[tool.poetry.group.pipeline.dependencies]
twine = "^5.0.0"
coverage-badge = "^1.1.0"


[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
mypy = "^1.10.1"
ruff = "^0.4.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true
