[project]
name = "safe-autonomy-simulation"
version = "2.1.4"
description = "A library for building continuous simulation environments, designed to support safe autonomy research."
authors = [
    { name = "Jamie Cunningham", email = "james.cunningham@udri.udayton.edu" },
]
readme = "README.md"
homepage = "https://github.com/act3-ace/safe-autonomy-simulation.git"
repository = "https://github.com/act3-ace/safe-autonomy-simulation.git"
documentation = 'https://github.com/act3-ace/safe-autonomy-simulation'
keywords = []
include = ["docs/*"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "diffrax>=0.6.1",
    "jax[cpu]>=0.4.30",
    "numpy>=2.0.2",
    "pint>=0.24.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "typing-extensions>=4.14.0",
]

[dependency-groups]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-material>=9.6.15",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings>=0.29.1",
]
pipeline = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]
test = [
    "pyinstrument>=5.0.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.mypy.overrides]]
module = "scipy"
ignore_missing_imports = true
